# intellab_ai

./: .dockerignore  .gitignore  Dockerfile  DockerfilePostgres  compose.yaml  docker-compose.yml  formatted_doc.txt  hehe.txt  intellab.Dockerfile  model.ts  pyproject.toml  run.txt
agents/: agent.py
agents/utils/: models.py  nodes.py  prompts.py  state.py  tools.py  vectordb.py
docker/: Dockerfile.service
modules/: info_loader.py  vectordb.py
notebooks/: demo.ipynb
src/: run_agent.py  run_service.py
src/agents/: agents.py  global_chatbot.py  lesson_chatbot.py  llama_guard.py  problem_chatbot.py  summarize_agent.py  title_generator.py
src/core/: database.py  llm.py  prompt_manager.py  settings.py
src/documents/: problems.csv
src/documents/fonts/: DejaVuSans.pkl
src/researchs/: chatbot.ipynb  chatbot_v2.ipynb  courses.csv  feed_data.py  hehe.txt  hehet.txt  lesson_chatbot.py  lesson_documents.json  summary.md  test_dalle.py  test_stream.py  test_summary.ipynb
src/researchs/problem_chatbot/: problem.md  problem_chatbot.ipynb  review_code.ipynb  testing.py
src/researchs/problem_chatbot/threads/: ai_response_097ab701-099b-4ee8-80bb-26ca32ddb56c.txt  ai_response_102.txt  ai_response_103.txt  (+5 more)
src/researchs/rag/: Introduction to DSA I.txt  embedding.ipynb  feed_data.py  langchain_pg_embedding.csv  lesson_documents.json  map_reduce.ipynb  map_reduce.json  rag.py  rag_graph.py  test_loader.py
src/schema/: models.py  prompts.py  schema.py
src/service/: __init__.py  feed_data.py  main.py  service.py  utils.py
src/service/routers/: __init__.py  history.py  invoking_agents.py  streaming_agents.py
(+4 files in other folders)
