[tool.poetry]
name = "intellab_ai"
version = "0.1.0"
description = ""
authors = ["graduation <graduation21072003@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
chromadb = "^0.5.0"
tiktoken = "^0.7.0"
langchain-core = "^0.3.0"
langchain-community = "^0.3.0"
langchain-text-splitters = "^0.3.0"
langgraph = "^0.2.0"
langchain-anthropic = "^0.2.0"
langchain-openai = "^0.2.0"
langchainhub = "^0.1.20"
langchain-ollama = "^0.2.0"


[tool.poetry.group.dev.dependencies]
langgraph-cli = "^0.1.35"
langgraph-sdk = "^0.1.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
